--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="notes">Notes</string>
     <string name="enter_notes">Enter notes</string>
     <string name="save">Save</string>
+
+    <string name="open_drawer">Open Drawer</string>
 </resources>
